+ fix menu & layout on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,10 +121,17 @@ p {
   background-color: transparent;
 }
 
+.navbar-toggle {
+  display: block;
+}
+
 @media (min-width: 768px) {
   .navbar-default {
     background-color: transparent;
     border-color: transparent;
+  }
+  .navbar-toggle {
+    display: none;
   }
   .navbar-default .navbar-header .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
